<resources>
    <string name="app_name">Karacal</string>
    <string name="hello">Salut !</string>
    <string name="we_are_happy">On est content de vous voir !</string>
    <string name="connect_via_facebook">Se connecter avec Facebook</string>
    <string name="connect_via_google">Se connecter avec Google</string>
    <string name="connect_via_email">Se connecter avec email</string>
    <string name="by_signing">En s\'inscrivant ou en créant un compte, vous acceptez notre</string>
    <string name="privacy_policy">Politique de Confidentialité</string>
    <string name="and"> et les </string>
    <string name="terms_of_service">Conditions Générales d\'Utilisation</string>
    <string name="don_t_have_account">Pas encore de compte ?</string>
    <string name="loginRequest">Connexion</string>
    <string name="e_mail">Votre adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="forgot">Mot de passe oublié ?</string>
    <string name="enter_email">Entrez votre email</string>
    <string name="enter_password">Entrer le mot de passe</string>
    <string name="registration">Inscription</string>
    <string name="referral_code">Code de parrainage</string>
    <string name="interests">Les intérêts</string>
    <string name="continue_text">Сontinuer</string>
    <string name="first_name">Prénom</string>
    <string name="second_name">Nom</string>
    <string name="birth_date">Date de naissance</string>
    <string name="my_name_is_karacal">Moi je m\'appelle Karacal et je suis né le 26 Février 2018 à Paris. Et toi ?</string>
    <string name="e_mail_address">Votre adresse email</string>
    <string name="location">Ville de résidence</string>
    <string name="say_more_about_you">Parlez un peu plus de vous !</string>
    <string name="permission_denied">L\'application n\'a pas d\'autorisations pour cette action.</string>
    <string name="permission_needed">L\'application a besoin de cette autorisation pour un contenu plus adapté.</string>
    <string name="error_obtaining_location">Erreur lors de l\'obtention de l\'emplacement</string>
    <string name="enter_code">Entrez le code de parrainage</string>
    <string name="to_add_unlimited_access">1 mois d\'accès illimité offert !</string>
    <string name="i_have_no_promo_code">Je n\'ai pas de code promo</string>
    <string name="your_interests">Tes intérêts</string>
    <string name="skip_this_step">Sauter cette étape</string>
    <string name="greetings">Bonjour, %s !</string>
    <string name="what_we_do">Alors on fait quoi aujourd\'hui ?</string>
    <string name="see_around_me">Voir autour de moi</string>
    <string name="view_all">Voir tout</string>
    <string name="all_guides_list">Tous les guides</string>
    <string name="recommended_for_you">Recommandé pour vous</string>
    <string name="meters_from_you">À 500m</string>
    <string name="originals">Originales</string>
    <string name="details">Détails</string>
    <string name="duration_format">%dh%02d</string>
    <string name="search_location">Chercher</string>
    <string name="title_activity_maps">Carte</string>
    <string name="recent">Récent</string>
    <string name="min">min</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">heure</string>
    <string name="hours">heures</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="notification_time_format">Il y a %d %s</string>
    <string name="filter">Filtre</string>
    <string name="cost">Prix</string>
    <string name="free">Gratuit</string>
    <string name="paid">Payant</string>
    <string name="types_of_content">Types de contenu</string>
    <string name="official">Officiel</string>
    <string name="non_official">Non-officiel</string>
    <string name="guide_level">Niveau du guide</string>
    <string name="expert">Expert</string>
    <string name="average">Moyen</string>
    <string name="discovery">Découverte</string>
    <string name="address">Adresse :</string>
    <string name="rating">Classement :</string>
    <string name="duration">Durée :</string>
    <string name="reviews">Commentaires :</string>
    <string name="guide">guide</string>
    <string name="guides">guides</string>
    <string name="guide_count_format">%d %s</string>
    <string name="comment">commentaire</string>
    <string name="comments">commentaires</string>
    <string name="comments_count_format">%d %s</string>
    <string name="track">morceau</string>
    <string name="tracks">morceaux</string>
    <string name="tracks_count_format">%d %s</string>
    <string name="this_audio_is_paid">Cet audio est payant</string>
    <string name="donate_to_the_guide">Faire un don au guide</string>
    <string name="donate">Faire un don</string>
    <string name="enter_amount">Entrez le montant</string>
    <string name="euro">€</string>
    <string name="price_format">%.2f%s</string>
    <string name="donate_amount_format">%d %s</string>
    <string name="you_can_donate">Ce don ira directement et entièrement\nau guide que vous avez choisi</string>
    <string name="select_action">Séléctionner une action</string>
    <string name="i_like_it">J\'aime ça</string>
    <string name="download_all_album">Télécharger l\'integralité de l\'album</string>
    <string name="share_this_track">Partager ce morceau</string>
    <string name="report_a_problem">Signaler un problème</string>
    <string name="a_technical_problem">Un problème technique</string>
    <string name="a_mistake_of_course">Erreur d\'itinéraire</string>
    <string name="an_error_in_what_the_guide_says">Erreur dans ce que dit le guide</string>
    <string name="something_else">Autre</string>
    <string name="cancel">Annuler</string>
    <string name="share_your_impressions">Partager votre opinion</string>
    <string name="put_this_guide_in_favor">Mettre ce guide en favoris</string>
    <string name="to_write_a_comment">Écrire un commentaire</string>
    <string name="submit">Soumettre</string>
    <string name="select_plan">Séléctionnez un forfait</string>
    <string name="to_get_access">Pour avoir accès à ce morceau\nchoisissez le forfait que vous préférez</string>
    <string name="access_to_selected_guide">Accès à l\'audioguide séléctionné</string>
    <string name="unlimited_access">Accès à tous les audioguides</string>
    <string name="per_month">\/mois</string>
    <string name="enter_message">Écrire un commentaire...</string>
    <string name="title_comments">Commentaires</string>
    <string name="all_guides">Tous les podcasts</string>
    <string name="refer_a_friend">Parrainer un ami</string>
    <string name="how_we_choose_our_guide">Comment nous choisissons nos guides ?</string>
    <string name="contact_karacal">Contacter Karacal</string>
    <string name="settings">Paramètres</string>
    <string name="dashboard_guide">Dashboard Guide</string>
    <string name="already_downloaded">Déjà téléchargés</string>
    <string name="my_information">Mes informations</string>
    <string name="change_password">Changer mon mot de passe</string>
    <string name="about">Á propos</string>
    <string name="app_settings">Paramètres de l\'application</string>
    <string name="download_only_via_wifi">Télécharger uniquement via wifi</string>
    <string name="pause_audio_after_each_segment">Mettre l\'audio en pause après chaque segment</string>
    <string name="allow_notifications">Autoriser les notifications</string>
    <string name="other">Autre</string>
    <string name="terms">Conditions Générales d\'Utilisation</string>
    <string name="personal_data_protection_policy">Politique de Protection des Données Personnelles</string>
    <string name="delete_my_account">Supprimer mon compte</string>
    <string name="enter_first_name">Entrez le prénom</string>
    <string name="enter_second_name">Entrez le nom</string>
    <string name="enter_location">Entrez localisation</string>
    <string name="your_personal_code">Votre code pesonnel</string>
    <string name="your_personal_code_description">Pour avoir un accès illimité aux ressources\npendant 1 mois, partagez le code\nde six chiffres reçu de la part de votre ami</string>
    <string name="share">Partager</string>
    <string name="copy_to_clipboard">Copier dans le presse-papiers</string>
    <string name="share_referral_code">Partager le code de référence</string>
    <string name="personal_data_protection_policy_description">Please read these "Terms of Service" fully and carefully before using https://www.invisionapp.com(the "InVision Website") and any of the services, features, Content (defined below) or applications made available by InVisionApp Inc. and its affiliates, (“InVision”, "we", "us" or "our") in connection with the self-service version of InVision’s design collaboration platform (the "Platform") or any other InVision services or platform that links to these Terms of Service (collectively, the "Services").</string>
    <string name="these_terms_of_service">These Terms of Service incorporate InVisionApp Inc.’s Privacy Policy https://www.invisionapp.com/privacy, which is hereby made a part of these Terms of Service.</string>
    <string name="these_terms_of_service_description">These Terms of Service set forth the legally binding terms and conditions for your use of the Services. By clicking on the “Accept,” "sign up free," "upgrade your plan," or equivalent access, agreement or purchasing button, you or the company or entity that you represent ("you," "your," "yours" or "customer") are consenting to be bound by and are becoming a party to these Terms of Service. You are also representing and warranting that the individual clicking on the button is authorized to enter into this agreement and bind such entity. Your continued use of any portion of the services shall also constitute assent to the terms of these Terms of Service. If you are using the services on behalf of a company or other entity, then all references to "you" or "your" herein shall refer to both the individual and the entity</string>
    <string name="apply">Appliquer</string>
    <string name="referral_code_copied_to_clipboard">Your referral code copied to clipboard</string>
    <string name="follow_my_listenings">Suivre les écoutes</string>
    <string name="create_tour">Créer une visite</string>
    <string name="draft">Brouillon</string>
    <string name="waiting">En attente</string>
    <string name="published">Publié</string>
    <string name="suspended">Suspendu</string>
    <string name="dashboard_tour_created_format">Créé le %s</string>
    <string name="take_a_photo">Prendre une photo</string>
    <string name="available_funds">Dans le portefeuille</string>
    <string name="withdraw_funds">Faire un virement</string>
    <string name="number_of_paid_guides">Nombre de guides payantes</string>
    <string name="number_of_free_listenings">Nombre d\'écoutes gratuites</string>
    <string name="earning">Gain</string>
    <string name="edit_guide">Modifier la visite</string>
    <string name="take_a_picture">Prenez une photo ou choisissez une image de la gallerie</string>
    <string name="title">Nom de la visite</string>
    <string name="description">Description de la visite</string>
    <string name="tags">Tags</string>
    <string name="monthly_subscription_title">One month subscription €10.00</string>
    <string name="six_month_subscription_title">Half year subscription €50.00</string>
    <string name="yearly_subscription_title">One year subscription €100.00</string>
    <string name="action_subscribe">Souscrire</string>
    <string name="subscription_explanation">L\’abonnement vous permet d\’écouter tous les podcasts en illimiter pour un prix de\n9.99€/mois</string>
    <string name="payment_method_missing">Vous devez ajouter un mode de paiement pour pouvoir souscrire à un abonnement</string>
    <string name="subscription">Abonnement</string>
</resources>