<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonSubsMonthly"
        android:text="@string/monthly_subscription_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Button"/>

    <Button
        android:id="@+id/buttonSubsSixMonth"
        android:text="@string/six_month_subscription_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Button"/>

    <Button
        android:id="@+id/buttonSubsYearly"
        android:text="@string/yearly_subscription_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Button"/>

    <Button
        android:id="@+id/buttonCancel"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Button"/>

</LinearLayout>