<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentMethodActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonBack"
            style="@style/SmallButton"
            android:layout_marginStart="16dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_back"
            android:tint="@drawable/selector_orange_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAppBarTitle"
            style="@style/TextWhite.AppBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/TextWhite.Subtitle"
        android:id="@+id/tvSubscriptionExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/subscription_explanation"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        />

    <Button
        android:id="@+id/buttonSubscribe"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:visibility="visible"
        android:text="@string/action_subscribe"
        app:layout_constraintTop_toBottomOf="@+id/tvSubscriptionExplanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:theme="@style/AppTheme.ProgressBarCircle"
        app:layout_constraintTop_toTopOf="@+id/buttonSubscribe"
        app:layout_constraintStart_toStartOf="@+id/buttonSubscribe"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubscribe"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSubscribe"
        />

    <TextView
        style="@style/TextWhite.Subtitle"
        android:id="@+id/tvPaymentMethodMissing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/payment_method_missing"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubscribe"
        />

</androidx.constraintlayout.widget.ConstraintLayout>